--- a/Resources/views/menu.html.twig
+++ b/Resources/views/menu.html.twig
@@ -4,7 +4,7 @@
     {% import 'knp_menu.html.twig' as macros %}
 
     {% if item.hasChildren and options.depth is not sameas(0) and item.displayChildren %}
-        <ul class="{{ block('listCssClass') }}"{{ macros.attributes(listAttributes) }}>
+        <ul{% if item.level == 0 %} class="{{ block('listCssClass') }}"{% endif %}{{ macros.attributes(listAttributes) }}>
             {{ block('children') }}
         </ul>
     {% endif %}
